# rev.ng

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml
compiler/: CMakeLists.txt  module.cpp
compiler/include/: module.h
tests/: CMakeLists.txt  compiler_test.cpp
